tests/rosetta/out/Smalltalk/angle-difference-between-two-bearings-2.out
/tmp/angle-difference-between-two-bearings-2.st:7: parse error, expected ']'
